Implemented the project functionality

--- a/views/login.html
+++ b/views/login.html
@@ -5,16 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles/login.css">
+    <link rel="stylesheet" href="../styles/login.css">
 </head>
 <body class="login-body">
     <h1>Expense Tracker</h1>
     <div class="form-container">
         <form class="login-form" method="POST" onsubmit="login(event)">
-            <!-- <div class="form-field">
-                <label for="name">Enter your name:</label><br>
-                <input class="form-input" id="name" type="text" required/><br>
-            </div> -->
             <div class="form-field">
                 <label for="email">Enter your email:</label><br>
                 <input class="form-input" id="email" type="email" required/><br>
@@ -39,6 +35,6 @@
     </div>
     
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
-    <script src="login.js"></script>
+    <script src="../scripts/login.js"></script>
 </body>
 </html>
