--- a/views/expense-main.html
+++ b/views/expense-main.html
@@ -27,6 +27,9 @@
             <div class="nav-button">
                 <a class="header-link" href="yearly.html">Yearly</a>
             </div>
+            <div class="nav-button">
+                <a class="header-link" href="login.html">Logout</a>
+            </div>
             <!-- id="yearly-header" class="header-link" href="yearly.html" -->
         </nav>
     </header>
