--- a/views/daily.html
+++ b/views/daily.html
@@ -27,6 +27,9 @@
             <div class="nav-button">
                 <a id="yearly-header" class="header-link" href="yearly.html">Yearly</a>
             </div>
+            <div class="nav-button">
+                <a class="header-link" href="login.html">Logout</a>
+            </div>
         </nav>
     </header>
     <main class="main-section">
