--- a/views/expense-main.html
+++ b/views/expense-main.html
@@ -36,7 +36,7 @@
             <!-- id="yearly-header" class="header-link" href="yearly.html" -->
         </nav>
     </header>
-    <main class="main-section">
+    <main id="main-section" class="main-section">
         <div class="main-top">
             <h3 class="logo-text">With expense tracker we help you in keeping a record of your daily expenses so that you can plan your finances, never go over the budget or break your head trying to remember an expense you forgot which can really mess up the balance sheet. </h3>
             <img class="logo-img"src="https://media.giphy.com/media/l2YOp5fNAFMp63B3a/giphy.gif" alt="gif">
@@ -62,6 +62,8 @@
                 </div>
                 <button class="form-text" type="submit"> Add expense</button>
             </form>
+            <ul id="leaderboardList">
+            </ul>
         </div>
     </main>
     <footer>
