--- a/views/yearly.html
+++ b/views/yearly.html
@@ -42,7 +42,6 @@
         </div>
         <div class="form-list">
             <div class="expenses">
-                <h1 class="expense-header">Expenses</h1>
                 <ul id="expense-list">
                 </ul>
             </div>
@@ -71,6 +70,7 @@
     <div class="copyright">
         <p>@❤️ritikGangwar</p>
     </div>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <script src="../scripts/yearly.js"></script>
 </body>
