--- a/styles/reset.css
+++ b/styles/reset.css
@@ -2,34 +2,40 @@ body{
     text-align:center;
     font-size:1.4vw;
     /* background-color:#D8D8D8; */
-    display:grid;
-    grid-template-rows: 0.6fr 5fr 1fr;
 }
 
+.login-body{
+    display:grid;
+    grid-template-rows: 0.6fr 3.5fr 1fr;
+}
 a{
     text-decoration:none;
 }
+
 .form-container{
     position:relative;
     margin: 0 auto;
     padding-top:50px;
     width:30vw;
     display:grid;
-    grid-template-rows:4fr 1fr;
+    grid-template-rows:3fr 1fr;
 }
 form{
     background-color:#41644A;
     border-radius:9px;
     display:grid;
-    grid-template-rows: repeat(4,1fr);
+    grid-template-rows: repeat(2,1fr);
 }
 
 .form-field{
+    position:relative;
+    margin: auto auto;
     text-align:center;
     width:100%;
 }
 
-.email-message{
+.login-message,
+.password-message{
     color:red;
     padding-right:50%;
 }
@@ -50,7 +56,7 @@ form{
     position:relative;
     margin: 0 auto;
 }
-.log-in-container{
+.sign-up-container{
     width:100%;
     height:40%;
     background-color:#088395;
@@ -58,12 +64,15 @@ form{
     margin:auto;
     box-shadow: 0 3px 0 0 #0A4D68;
 }
-.log-in-link{
+.sign-up-link{
     font-size:100%;
     text-decoration:none;
     color:black;
     position:relative;
     margin:2%;
+}
+#forget-link{
+    font-size:smaller;
 }
 hr{
     width:60%;
