Integrated the front-end for download report

--- a/views/expense-main.html
+++ b/views/expense-main.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,16 +8,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="../styles/expense-main.css">
 </head>
+
 <body>
     <header>
         <nav>
             <img class="nav-image" src="../images/money-sack.png" alt="Loading image" />
-                
+
             <div class="nav-button">
                 <a class="header-link" href="expense-main.html">Home</a>
-            </div>
-            <div class="nav-button">
-                <a class="header-link" href="">About</a>
             </div>
             <div class="nav-button">
                 <a id="daily-header" class="header-link" href="daily.html">Daily</a>
@@ -31,6 +30,9 @@
                 <a id="razorpayBtn" class="header-link" href="">Buy premium</a>
             </div>
             <div class="nav-button">
+                <a class="header-link" id="leader-board" href="">Show leaderboard</a>
+            </div>
+            <div class="nav-button">
                 <a class="header-link" href="login.html">Logout</a>
             </div>
             <!-- id="yearly-header" class="header-link" href="yearly.html" -->
@@ -38,50 +40,62 @@
     </header>
     <main id="main-section" class="main-section">
         <div class="main-top">
-            <h3 class="logo-text">With expense tracker we help you in keeping a record of your daily expenses so that you can plan your finances, never go over the budget or break your head trying to remember an expense you forgot which can really mess up the balance sheet. </h3>
-            <img class="logo-img"src="https://media.giphy.com/media/l2YOp5fNAFMp63B3a/giphy.gif" alt="gif">
+            <h3 class="logo-text">With expense tracker we help you in keeping a record of your daily expenses so that
+                you can plan your finances, never go over the budget or break your head trying to remember an expense
+                you forgot which can really mess up the balance sheet. </h3>
+            <img class="logo-img" src="https://media.giphy.com/media/l2YOp5fNAFMp63B3a/giphy.gif" alt="gif">
         </div>
         <div class="form-list">
-            <form class="form" onsubmit="addExpense(event)">
-                <div class="form-ele">
-                    <label class="form-label" for="price">Price:</label>
-                    <input id="price" class="form-input" type="text" ><br>
-                </div>
-                <div class="form-ele">
-                    <label class="form-label" for="product">Product:</label>
-                    <input id="product" class="form-input" type="text" ><br>
-                </div>
-                <div class="form-ele">
-                    <label class="form-label" for="category">Category:</label>
-                    <select id="category" class="form-text form-input" name="category" >
-                        <option class="form-text" value="food">Food</option>
-                        <option class="form-text" value="electronics">Electronics</option>
-                        <option class="form-text" value="lifestyle">Lifestyle</option>
-                        <option class="form-text" value="lifestyle">Other</option>
-                    </select><br>
-                </div>
-                <button class="form-text" type="submit"> Add expense</button>
-            </form>
+            <div class="add-salary-expense">
+                <form class="form" onsubmit="addExpense(event)">
+                    <div class="form-ele">
+                        <label class="form-label" for="price">Price:</label>
+                        <input id="price" class="form-input" type="text"><br>
+                    </div>
+                    <div class="form-ele">
+                        <label class="form-label" for="product">Product:</label>
+                        <input id="product" class="form-input" type="text"><br>
+                    </div>
+                    <div class="form-ele">
+                        <label class="form-label" for="category">Category:</label>
+                        <select id="category" class="form-text form-input" name="category">
+                            <option class="form-text" value="food">Food</option>
+                            <option class="form-text" value="electronics">Electronics</option>
+                            <option class="form-text" value="lifestyle">Lifestyle</option>
+                            <option class="form-text" value="lifestyle">Other</option>
+                        </select><br>
+                    </div>
+                    <button class="form-text" type="submit"> Add expense</button>
+                </form>
+                <form class="form" onsubmit="addSalary(event)">
+                    <div class="form-ele">
+                        <label class="form-label" for="amount">Amount:</label>
+                        <input id="amount" class="form-input" type="number"><br>
+                    </div>
+                    <button class="form-text" type="submit"> Add salary</button>
+                </form>
+            </div>
             <ul id="leaderboardList">
             </ul>
         </div>
     </main>
     <footer>
         <div class="footer-div-left">
-            <img class="footer-img" src="../images/footer-left.png"/>
+            <img class="footer-img" src="../images/footer-left.png" />
         </div>
         <div class="footer-div-center">
-            <h3 class="footer-text">Expense tracker is an open source application created in 2023. It is inspired by the app "Day to Day Expenses" and created as a portfolio project.</h3>
+            <h3 class="footer-text">Expense tracker is an open source application created in 2023. It is inspired by the
+                app "Day to Day Expenses" and created as a portfolio project.</h3>
             <div class="links">
-                <a class="footer-link" href="" >Home</a>
+                <a class="footer-link" href="">Home</a>
                 <a class="footer-link" href="">About</a>
-                <a id="daily-footer" class="footer-link" href="">Daily</a>
-                <a id="monthly-footer" class="footer-link" href="">Monthly</a>
-                <a id="yearly-footer" class="footer-link" href="">Yearly</a>
+                <a id="daily-footer" class="footer-link" href="daily.html">Daily</a>
+                <a id="monthly-footer" class="footer-link" href="monthly.html">Monthly</a>
+                <a id="yearly-footer" class="footer-link" href="yearly.html">Yearly</a>
             </div>
         </div>
         <div class="footer-div-right">
-            <img class="footer-img" src="../images/money-sack.png"/>
+            <img class="footer-img" src="../images/money-sack.png" />
         </div>
     </footer>
     <div class="copyright">
@@ -91,4 +105,5 @@
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <script src="../scripts/expense-main.js"></script>
 </body>
+
 </html>
