--- a/styles/expense-main.css
+++ b/styles/expense-main.css
@@ -18,11 +18,11 @@ body{
 }
 
 .boardButton{
-    background-color: #FFB84C ;
-    border-color:azure;
+    color:#41644A;
+    font-weight:1000;
     border-radius:7px;
     width: 100%;
-    height:35px;
+    height:30px;
 }
 
 .premiumButton{
@@ -70,7 +70,7 @@ body{
 .form-input{
     margin-left:5px;
     width:20%;
-    height:2.5vh;
+    height:3vh;
 }
 .form-text{
     font-size:1.3vw;
@@ -81,6 +81,11 @@ button{
     color:azure;
     background-color:#41644A;
 }
+.add-salary-expense{
+    display:grid;
+    grid-template-columns:1fr 1fr;
+}
+
 
 #leaderboardList{
     text-align:center;
