--- a/styles/expenses.css
+++ b/styles/expenses.css
@@ -24,11 +24,15 @@ body{
     grid-template-rows: 1fr 1fr; */
 }
 .boardButton{
-    background-color: #FFB84C ;
-    border-color:azure;
+    color:#41644A;
+    font-weight:1000;
     border-radius:7px;
     width: 100%;
     height:30px;
+}
+
+.button-get-expense{
+    width:100px;
 }
 /* linear-gradient(
     red, #f06d06
@@ -69,6 +73,33 @@ button{
     background-color:#41644A;
 }
 
+table{
+    position:relative;
+    margin: 0 auto;
+    font-size:1.5vw;
+    font:sans-serif;
+}
+th{
+    background-color:#41644A;
+    width:10%;
+}
+td{
+    background-color:#C7E9B0;
+    width:10%;
+}
+.delete-field{
+    background-color:white;
+}
+.report-container{
+    text-align:right;
+    padding-right:15%;
+}
+#report-button{
+    width:60px;
+    height:60px;
+    border-radius:50%;
+
+}
 .expenses{
     text-align:center;
 }
@@ -103,8 +134,7 @@ button{
 } */
 
 .delete-button{
-    margin-left:10px;
-    width:25%;
+    width:80px;
     height:30px;
 }
 
