--- a/views/monthly.html
+++ b/views/monthly.html
@@ -16,9 +16,6 @@
                 <a class="header-link" href="expense-main.html">Home</a>
             </div>
             <div class="nav-button">
-                <a class="header-link" href="">About</a>
-            </div>
-            <div class="nav-button">
                 <a id="daily-header" class="header-link" href="daily.html">Daily</a>
             </div>
             <div class="nav-button">
@@ -29,6 +26,9 @@
             </div>
             <div class="nav-button">
                 <a id="razorpayBtn" class="header-link" id="razorpay" href="">Buy premium</a>
+            </div>
+            <div class="nav-button">
+                <a class="header-link" id="leader-board" href="">Show leaderboard</a>
             </div>
             <div class="nav-button">
                 <a class="header-link" href="login.html">Logout</a>
@@ -42,8 +42,25 @@
         </div>
         <div class="form-list">
             <div class="expenses">
-                <ul id="expense-list">
-                </ul>
+                <form action="">
+                    <input placeholder="month" id="month-field" type="number">
+                    <input placeholder="year" id="year-field" type="number">
+                    <button class="button-get-expense" onclick="getExpenses(event)"type="submit">Submit</button>
+                </form>
+                <!-- <ul id="expense-list">
+                </ul> -->
+                <h1 id="expenses-heading">Expenses</h1>
+                <table id="expense-table">
+                    <th>Date</th>
+                    <th>Description</th>
+                    <th>Category</th>
+                    <th>Income</th>
+                    <th>Expense</th>
+                </table>
+                <p id="net-money"></p>
+                <div class="report-container">
+                    <button id="report-button">PDF</button>
+                </div>
             </div>
             <ul id="leaderboardList">
             </ul>
