--- a/styles/expense-main.css
+++ b/styles/expense-main.css
@@ -18,11 +18,11 @@ body{
 }
 
 .boardButton{
-    color:#41644A;
-    font-weight:1000;
+    background-color: #FFB84C ;
+    border-color:azure;
     border-radius:7px;
     width: 100%;
-    height:30px;
+    height:35px;
 }
 
 .premiumButton{
@@ -70,7 +70,7 @@ body{
 .form-input{
     margin-left:5px;
     width:20%;
-    height:3vh;
+    height:2.5vh;
 }
 .form-text{
     font-size:1.3vw;
@@ -81,11 +81,6 @@ button{
     color:azure;
     background-color:#41644A;
 }
-.add-salary-expense{
-    display:grid;
-    grid-template-columns:1fr 1fr;
-}
-
 
 #leaderboardList{
     text-align:center;
