--- a/styles/expenses.css
+++ b/styles/expenses.css
@@ -24,15 +24,11 @@ body{
     grid-template-rows: 1fr 1fr; */
 }
 .boardButton{
-    color:#41644A;
-    font-weight:1000;
+    background-color: #FFB84C ;
+    border-color:azure;
     border-radius:7px;
     width: 100%;
     height:30px;
-}
-
-.button-get-expense{
-    width:100px;
 }
 /* linear-gradient(
     red, #f06d06
@@ -73,33 +69,6 @@ button{
     background-color:#41644A;
 }
 
-table{
-    position:relative;
-    margin: 0 auto;
-    font-size:1.5vw;
-    font:sans-serif;
-}
-th{
-    background-color:#41644A;
-    width:10%;
-}
-td{
-    background-color:#C7E9B0;
-    width:10%;
-}
-.delete-field{
-    background-color:white;
-}
-.report-container{
-    text-align:right;
-    padding-right:15%;
-}
-#report-button{
-    width:60px;
-    height:60px;
-    border-radius:50%;
-
-}
 .expenses{
     text-align:center;
 }
@@ -134,7 +103,8 @@ td{
 } */
 
 .delete-button{
-    width:80px;
+    margin-left:10px;
+    width:25%;
     height:30px;
 }
 
