--- a/views/monthly.html
+++ b/views/monthly.html
@@ -14,10 +14,10 @@
                 
             <div class="nav-button">
                 <a class="header-link" href="expense-main.html">Home</a>
-            </div>
+            <!-- </div>
             <div class="nav-button">
                 <a class="header-link" href="">About</a>
-            </div>
+            </div> -->
             <div class="nav-button">
                 <a id="daily-header" class="header-link" href="daily.html">Daily</a>
             </div>
