--- a/views/daily.html
+++ b/views/daily.html
@@ -55,6 +55,7 @@
                 <!-- <ul id="expense-list"> -->
                 <!--                 
                 </ul> -->
+                <h2 id="date-head"></h2>
                 <h1 id="expenses-heading">Expenses</h1>
                 <table id="expense-table">
                     <th>Description</th>
@@ -63,6 +64,7 @@
                     <th>Expense</th>
                 </table>
                 <p id="net-money"></p>
+                <div id="pagination"></div>
                 <div class="report-container">
                     <button id="report-button">Download</button>
                 </div>
