--- a/views/yearly.html
+++ b/views/yearly.html
@@ -48,6 +48,7 @@
                 </form>
                 <!-- <ul id="expense-list">
                 </ul> -->
+                <h2 id="date-head"></h2>
                 <h1 id="expenses-heading">Expenses</h1>
                 <table id="expense-table">
                     <th>Date</th>
@@ -57,6 +58,7 @@
                     <th>Expense</th>
                 </table>
                 <p id="net-money"></p>
+                <div id="pagination"></div>
                 <div class="report-container">
                     <button id="report-button">PDF</button>
                 </div>
