--- a/views/monthly.html
+++ b/views/monthly.html
@@ -60,6 +60,13 @@
                 </table>
                 <p id="net-money"></p>
                 <div id="pagination"></div>
+                <div class="number-rows-section">
+                    <form id="number-expenses-form" action="POST">
+                        <label for="number-fields" id="number-fields-label">Number of rows:</label>
+                        <input id="number-fields" type="number">
+                        <button type="submit" id="number-fields-submit">Get</button>
+                    </form>
+                </div>
                 <div class="report-container">
                     <button id="report-button">PDF</button>
                 </div>
