--- a/views/yearly.html
+++ b/views/yearly.html
@@ -70,11 +70,13 @@
                     <button id="report-button">PDF</button>
                 </div>
             </div>
-            <ul id="leaderboardList">
-            </ul>
-            <h1 id="downloads-head"></h1>
-            <ul id="download-list">
-            </ul>
+            <h1 id="leaderboard-heading"></h1>
+            <table id="leaderboard-table">
+                    <th id="leaderboard-head">Rank</th>
+                    <th id="leaderboard-head">Name</th>
+                    <th id="leaderboard-head">Expenses</th>
+            </table>
+            <a style="text-align:center" id="downloads-link" href="downloads.html">Click here to see previously downloaded reports</a>
         </div>
     </main>
     <footer>
